--- a/lib/issue260showcase_web/templates/page/index.html.eex
+++ b/lib/issue260showcase_web/templates/page/index.html.eex
@@ -3,7 +3,7 @@
   <p>A productive web framework that<br/>does not compromise speed and maintainability.</p>
 </section>
 
-<%= live_render(@conn, Issue260showcaseWeb.GithubDeployView, session: %{}) %>
+<%= live_render(@conn, Issue260showcaseWeb.TimerLiveView, session: %{}) %>
 
 <section class="row">
   <article class="column">
